# snake-game

./: CMakeLists.txt  README.md  main.c
debug/: debug.h
libs/apple/: apple.c  apple.h
libs/game/: game.c  game.h  gameMode.c  gameMode.h
libs/snake/: snake.c  snake.h  tail.c  tail.h
libs/utils/: config.h  logs.h  types.h
libs/utils/math/: math.c  math.h
